2011-01-24  Chris Marrin  <cmarrin@apple.com>

        Reviewed by Eric Seidel.

        Change ENABLE_3D_CANVAS to ENABLE_WEBGL
        https://bugs.webkit.org/show_bug.cgi?id=53041

        * configure.ac:
        
2011-01-24  Peter Gal  <galpeter@inf.u-szeged.hu>

        Rubber-stamped by Csaba Osztrogonác.

        * runtime: Removed. It was accidentally created by r76457.

2011-01-24  Andras Becsi  <abecsi@webkit.org>

        Reviewed by Csaba Osztrogonác.

        [Qt] Move project files into Source
        https://bugs.webkit.org/show_bug.cgi?id=52891

        * Source/DerivedSources.pro: Copied from DerivedSources.pro.
        * Source/WebKit.pri: Renamed from WebKit.pri.
        * Source/WebKit.pro: Added.
        * Source/common.pri: Renamed from common.pri.
        * WebKit.pro: Removed.

2011-01-20  Siddharth Mathur  <siddharth.mathur@nokia.com>

        Reviewed by Laszlo Gombos.

        [Qt][Symbian] Smaller debug symbol size when using RVCT 4.x
        https://bugs.webkit.org/show_bug.cgi?id=52835

        * WebKit.pri: Use --remove_unneeded_entities for RVCT 4.x compilers

2011-01-20  Alejandro G. Castro  <alex@igalia.com>

        Reviewed by Andreas Kling.

        [GTK] Fix typo in the webkit2 section of the configure.ac file
        https://bugs.webkit.org/show_bug.cgi?id=52801

        Fixed typo in the GTK WebKit2 compilation.

        * configure.ac:

2011-01-19  Kimmo Kinnunen  <kimmo.t.kinnunen@nokia.com>

        Reviewed by Andreas Kling.

        Enable usage of Google ld if it exist but is not on by default.

        [Qt] Enable the google ld if it exist but is not on by default
        https://bugs.webkit.org/show_bug.cgi?id=52625

        * common.pri: flip the test.

2011-01-18  Mihai Parparita  <mihaip@chromium.org>

        Unreviewed. Update .gitignore to reflect that WebKit is now in Source.
        
        * .gitignore:

2011-01-18  Krithigassree Sambamurthy  <krithigassree.sambamurthy@nokia.com>
