@@ -7,12 +7,12 @@ PROJECT(WebKit)
 IF (NOT CMAKE_BUILD_TYPE AND NOT CMAKE_C_FLAGS AND NOT CMAKE_CXX_FLAGS)
     SET(CMAKE_BUILD_TYPE Release)
 ENDIF ()
-SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/Source/cmake")
+SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
-SET(JAVASCRIPTCORE_DIR "${CMAKE_SOURCE_DIR}/Source/JavaScriptCore")
-SET(WEBCORE_DIR "${CMAKE_SOURCE_DIR}/Source/WebCore")
-SET(WEBKIT_DIR "${CMAKE_SOURCE_DIR}/Source/WebKit")
-SET(TOOLS_DIR "${CMAKE_SOURCE_DIR}/Tools")
+SET(JAVASCRIPTCORE_DIR "${CMAKE_SOURCE_DIR}/JavaScriptCore")
+SET(WEBCORE_DIR "${CMAKE_SOURCE_DIR}/WebCore")
+SET(WEBKIT_DIR "${CMAKE_SOURCE_DIR}/WebKit")
+SET(TOOLS_DIR "${CMAKE_SOURCE_DIR}/../Tools")
 SET(DERIVED_SOURCES_DIR "${CMAKE_BINARY_DIR}/DerivedSources")
 
 INCLUDE(WebKitMacros)
@@ -104,9 +104,9 @@ INCLUDE(WebKitPackaging)
 # -----------------------------------------------------------------------------
 # Add module directories
 # -----------------------------------------------------------------------------
-ADD_SUBDIRECTORY(Source/JavaScriptCore)
-ADD_SUBDIRECTORY(Source/WebCore)
-ADD_SUBDIRECTORY(Source/WebKit)
+ADD_SUBDIRECTORY(JavaScriptCore)
+ADD_SUBDIRECTORY(WebCore)
+ADD_SUBDIRECTORY(WebKit)
 
 # -----------------------------------------------------------------------------
 # Add test browser if exists
